tools/tree-sitter-marmoset/test/corpus/patterns.txt
================================================================================
Wildcard pattern
================================================================================

match x {
  case _: 0
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (wildcard_pattern)
        body: (expr_or_block
          (integer_literal))))))

================================================================================
Variable pattern
================================================================================

match x {
  case n: n + 1
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (variable_pattern
          (identifier))
        body: (expr_or_block
          (infix_expression
            left: (identifier)
            right: (integer_literal)))))))

================================================================================
Literal patterns
================================================================================

match x {
  case 0: "zero"
  case 1: "one"
  case _: "other"
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (literal_pattern
          (integer_literal))
        body: (expr_or_block
          (string_literal
            (string_content))))
      (match_arm
        pattern: (literal_pattern
          (integer_literal))
        body: (expr_or_block
          (string_literal
            (string_content))))
      (match_arm
        pattern: (wildcard_pattern)
        body: (expr_or_block
          (string_literal
            (string_content)))))))

================================================================================
Constructor pattern with field
================================================================================

match x {
  case Option.Some(v): v
  case Option.None: 0
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier)
          (variable_pattern
            (identifier)))
        body: (expr_or_block
          (identifier)))
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier))
        body: (expr_or_block
          (integer_literal))))))

================================================================================
Constructor pattern with multiple fields
================================================================================

match x {
  case HttpResponse.Ok(code, msg): code
  case HttpResponse.Error(code, _): code
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier)
          (variable_pattern
            (identifier))
          (variable_pattern
            (identifier)))
        body: (expr_or_block
          (identifier)))
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier)
          (variable_pattern
            (identifier))
          (wildcard_pattern))
        body: (expr_or_block
          (identifier))))))

================================================================================
Record pattern with punning
================================================================================

match p {
  case { x:, y: }: x + y
  case _: 0
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (record_pattern
          (record_pattern_punned
            name: (identifier))
          (record_pattern_punned
            name: (identifier)))
        body: (expr_or_block
          (infix_expression
            left: (identifier)
            right: (identifier))))
      (match_arm
        pattern: (wildcard_pattern)
        body: (expr_or_block
          (integer_literal))))))

================================================================================
Unqualified constructor pattern with flattened record payload sugar
================================================================================

match user {
  case User(name:, ...rest): name
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (constructor_pattern
          variant: (identifier)
          (record_pattern
            (record_pattern_punned
              name: (identifier))
            (spread_pattern
              (identifier))))
        body: (expr_or_block
          (identifier))))))

================================================================================
Unqualified nullary constructor pattern
================================================================================

match evt {
  case Quit: 0
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (constructor_pattern
          variant: (identifier))
        body: (expr_or_block
          (integer_literal))))))

================================================================================
Alternative pattern
================================================================================

match x {
  case 1 | 2: "small"
  case _: "big"
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (alternative_pattern
          (literal_pattern
            (integer_literal))
          (literal_pattern
            (integer_literal)))
        body: (expr_or_block
          (string_literal
            (string_content))))
      (match_arm
        pattern: (wildcard_pattern)
        body: (expr_or_block
          (string_literal
            (string_content)))))))
