tools/tree-sitter-marmoset/test/corpus/statements.txt
================================================================================
Let statement
================================================================================

let x = 5;

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    value: (integer_literal)))

================================================================================
Let statement without semicolon
================================================================================

let x = 5

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    value: (integer_literal)))

================================================================================
Let with type annotation
================================================================================

let x: Int = 5

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (type_identifier)
    value: (integer_literal)))

================================================================================
Let with union type annotation
================================================================================

let x: Int | Str = 5

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (union_type
      (type_identifier)
      (type_identifier))
    value: (integer_literal)))

================================================================================
Let with generic type annotation
================================================================================

let x: Option[Int] = Option.Some(42)

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (generic_type
      name: (identifier)
      arg: (type_identifier))
    value: (call_expression
      function: (field_access
        object: (identifier)
        field: (identifier))
      (integer_literal))))

================================================================================
Return statement
================================================================================

return 5;

--------------------------------------------------------------------------------

(source_file
  (return_statement
    value: (integer_literal)))

================================================================================
Return statement without semicolon
================================================================================

return x

--------------------------------------------------------------------------------

(source_file
  (return_statement
    value: (identifier)))

================================================================================
Expression statement
================================================================================

puts(42);

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (integer_literal))))

================================================================================
Block with multiple statements
================================================================================

let add = (x, y) -> {
  let sum = x + y;
  return sum;
}

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    value: (lambda_expression
      (lambda_parameter
        name: (identifier))
      (lambda_parameter
        name: (identifier))
      body: (expr_or_block
        (block
          (let_statement
            name: (identifier)
            value: (infix_expression
              left: (identifier)
              right: (identifier)))
          (return_statement
            value: (identifier)))))))

================================================================================
Early return syntax
================================================================================

let abs = (x: Int) -> {
  if (x < 0) return -x else return x;
}

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    value: (lambda_expression
      (lambda_parameter
        name: (identifier)
        type: (type_identifier))
      body: (expr_or_block
        (block
          (expression_statement
            (if_expression
              condition: (infix_expression
                left: (identifier)
                right: (integer_literal))
              consequence: (return_shorthand
                (prefix_expression
                  operand: (identifier)))
              alternative: (return_shorthand
                (identifier)))))))))
