tools/tree-sitter-marmoset/test/corpus/types.txt
================================================================================
Simple type annotation
================================================================================

let x: Int = 5

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (type_identifier)
    value: (integer_literal)))

================================================================================
Union type annotation
================================================================================

let x: Int | Str = 5

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (union_type
      (type_identifier)
      (type_identifier))
    value: (integer_literal)))

================================================================================
Three-member union type
================================================================================

let f = (x: Int | Str | Bool) -> x

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    value: (lambda_expression
      (lambda_parameter
        name: (identifier)
        type: (union_type
          (type_identifier)
          (type_identifier)
          (type_identifier)))
      body: (expr_or_block
        (identifier)))))

================================================================================
Generic type
================================================================================

let x: List[Int] = [1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (generic_type
      name: (type_identifier)
      arg: (type_identifier))
    value: (array_literal
      (integer_literal)
      (integer_literal)
      (integer_literal))))

================================================================================
Dyn trait object type
================================================================================

let x: Dyn[Show] = value

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (trait_object_type
      constraints: (supertrait_list
        (identifier)))
    value: (identifier)))

================================================================================
Dyn multi-trait object type
================================================================================

fn show(x: Dyn[Show & Eq]) -> Str = x.show()

--------------------------------------------------------------------------------

(source_file
  (fn_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (trait_object_type
        constraints: (supertrait_list
          (identifier)
          (identifier))))
    return_type: (type_identifier)
    body: (expr_or_block
      (call_expression
        function: (field_access
          object: (identifier)
          field: (identifier))))))

================================================================================
Nested generic type
================================================================================

let x: Option[List[Int]] = Option.Some([1, 2, 3])

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (generic_type
      name: (identifier)
      arg: (generic_type
        name: (type_identifier)
        arg: (type_identifier)))
    value: (call_expression
      function: (field_access
        object: (identifier)
        field: (identifier))
      (array_literal
        (integer_literal)
        (integer_literal)
        (integer_literal)))))

================================================================================
Record type
================================================================================

type Point = { x: Int, y: Int }

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (record_type
      (record_type_field
        name: (identifier)
        type: (type_identifier))
      (record_type_field
        name: (identifier)
        type: (type_identifier)))))

================================================================================
Wrapper type
================================================================================

type UserId = UserId(Int)

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (wrapper_type
      constructor: (identifier)
      payload: (type_identifier))))

================================================================================
Transparent named type alias
================================================================================

type Nameable = Named

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (type_variable
      (identifier))))

================================================================================
Transparent generic type alias
================================================================================

type MonkeyOrSadness = Result[Monkey, Str]

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (generic_type
      name: (identifier)
      arg: (type_variable
        (identifier))
      arg: (type_identifier))))

================================================================================
Constructor-bearing sum type
================================================================================

type Event = { Click({ x: Int, y: Int }), Quit }

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (constructor_type_body
      (enum_variant
        name: (identifier)
        (record_type
          (record_type_field
            name: (identifier)
            type: (type_identifier))
          (record_type_field
            name: (identifier)
            type: (type_identifier))))
      (enum_variant
        name: (identifier)))))

================================================================================
Message-bearing error sum type
================================================================================

type Error = { NotFound = "File not found", InvalidData(bytes.DecodeError) = "File contains invalid data" }

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (constructor_type_body
      (enum_variant
        name: (identifier)
        message: (string_literal
          (string_content)))
      (enum_variant
        name: (identifier)
        (qualified_type
          module: (identifier)
          name: (identifier))
        message: (string_literal
          (string_content))))))

================================================================================
Record type with row variable
================================================================================

let f = (r: { x: Int, ...row }) -> r.x

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    value: (lambda_expression
      (lambda_parameter
        name: (identifier)
        type: (record_type
          (record_type_field
            name: (identifier)
            type: (type_identifier))
          (row_variable
            (identifier))))
      body: (expr_or_block
        (field_access
          object: (identifier)
          field: (identifier))))))

================================================================================
Function type with return annotation
================================================================================

fn add(x: Int, y: Int) -> Int = x + y

--------------------------------------------------------------------------------

(source_file
  (fn_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type_identifier))
    (parameter
      name: (identifier)
      type: (type_identifier))
    return_type: (type_identifier)
    body: (expr_or_block
      (infix_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Union return type
================================================================================

fn pick(x: Int) -> Int | Str = x

--------------------------------------------------------------------------------

(source_file
  (fn_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type_identifier))
    return_type: (union_type
      (type_identifier)
      (type_identifier))
    body: (expr_or_block
      (identifier))))

================================================================================
General intersection type
================================================================================

type NamedAge = { name: Str } & { age: Int }

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (intersection_type
      (record_type
        (record_type_field
          name: (identifier)
          type: (type_identifier)))
      (record_type
        (record_type_field
          name: (identifier)
          type: (type_identifier))))))

================================================================================
Intersection binds tighter than union
================================================================================

type Example = Int | Str & Bool

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (union_type
      (type_identifier)
      (intersection_type
        (type_identifier)
        (type_identifier)))))

================================================================================
Parenthesized function member intersection
================================================================================

type Handler = ((Int) -> Str) & Bool

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (intersection_type
      (parenthesized_type
        (function_type
          (type_identifier)
          return_type: (type_identifier)))
      (type_identifier))))
